update on about page

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
-    <title>Welcome to Firebase Hosting</title>
+    <title>Samy's resume</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.0.2/firebase-app.js"></script>
@@ -36,7 +36,6 @@
       #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
       @media (max-width: 600px) {
         body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
       }
     </style>
   </head>
